menambahkan file index dan slctor

--- a/04/index.html
+++ b/04/index.html
@@ -31,6 +31,7 @@
 <!-- preudo-clas -->
 <a href="#h">pseudo-claas</a>
 
+<!-- menambahkan pseudo-element -->
 <h1>Pseudo-element</h1>
 <p>ini adalah paragraf yang cukup panjang.
   Sengaja dibuat panjang agar bisa dipakai sebagai contoh untuk selektor pseudo-elemen. 
